Fix some alignment

--- a/main.scss
+++ b/main.scss
@@ -116,6 +116,7 @@ li
                             'aside aside aside';
         nav
         {
+            padding: 0 2.5rem;
             transition: all .2s ease;
             transition-delay:.2s ;
             position: relative;
@@ -155,7 +156,7 @@ li
                 top: 60px;
                 left: 0;
                 width: 100%;
-                padding-left: 44px;
+                padding-left: 41px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
